--- a/addons/resource.language.en_gb/resources/strings.po
+++ b/addons/resource.language.en_gb/resources/strings.po
@@ -5466,6 +5466,7 @@ msgstr ""
 
 #empty strings from id 12374 to 12375
 
+#: xbmc/games/dialogs/osd/DialogGameAudioSettings.cpp
 #: xbmc/settings/dialogs/GUIDialogAudioDSPSettings.cpp
 #: xbmc/video/dialogs/GUIDialogAudioSubtitleSettings.cpp
 #: xbmc/video/dialogs/GUIDialogVideoSettings.cpp
@@ -5473,6 +5474,7 @@ msgctxt "#12376"
 msgid "Set as default for all media"
 msgstr ""
 
+#: xbmc/games/dialogs/osd/DialogGameAudioSettings.cpp
 #: xbmc/video/dialogs/GUIDialogAudioSubtitleSettings.cpp
 #: xbmc/video/dialogs/GUIDialogVideoSettings.cpp
 msgctxt "#12377"
@@ -6508,6 +6510,7 @@ msgstr ""
 
 #: xbmc/video/dialogs/GUIDialogVideoSettings.cpp
 #: addons/skin.estuary/xml/Variables.xml
+#: addons/skin.estuary/xml/Custom_1101_SettingsList.xml
 #: addons/skin.estuary/xml/Custom_1106_VideoOSDSettings.xml
 msgctxt "#13395"
 msgid "Video settings"
@@ -16964,7 +16967,48 @@ msgctxt "#35220"
 msgid "Game providers"
 msgstr ""
 
-#empty strings from id 35221 to 35249
+#. Title of the game OSD menu
+#: addons/skin.estuary/xml/GameOSD.xml
+msgctxt "#35221"
+msgid "Game Menu"
+msgstr ""
+
+#. Label of button for stopping game playback
+#: addons/skin.estuary/xml/GameOSD.xml
+msgctxt "#35222"
+msgid "Exit"
+msgstr ""
+
+#. Label of button for opening the saved game manager
+#: addons/skin.estuary/xml/GameOSD.xml
+msgctxt "#35223"
+msgid "Saved Games"
+msgstr ""
+
+#. Title of the audio settings window for gameplay
+#: addons/skin.estuary/xml/Custom_1101_SettingsList.xml
+#: xbmc/games/dialogs/osd/DialogGameAudioSettings.cpp
+msgctxt "#35224"
+msgid "Audio settings"
+msgstr ""
+
+#. Label of button for opening the input configuration dialog
+#: addons/skin.estuary/xml/Custom_1101_SettingsList.xml
+msgctxt "#35225"
+msgid "Input settings"
+msgstr ""
+
+#. Label of game menu button for opening the cheat manager
+msgctxt "#35226"
+msgid "Cheats"
+msgstr ""
+
+#. Title of the dialog for game achievements
+msgctxt "#35227"
+msgid "Achievements"
+msgstr ""
+
+#empty strings from id 35230 to 35249
 
 #: xbmc/windows/GUIMediaWindow.cpp
 msgctxt "#35250"
